--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,11 @@ authors = ["Florian Lackner <florian.lackner@gmail.com>"]
 description = """
 Reads a json file and pretty prints it on stdout.
 """
-license = "GNU General Public License v3.0 or later"
+license = "GPL-3.0"
 license-file = "LICENSE"
+repository = "https://github.com/flo-l/pp_rs/"
+readme = "README.md"
+
 
 [dependencies]
 serde_json = "1.0"
