use serde-transcode for better performance remove restriction that input files have to be of the form *.json make input optional, read from stdin otherwise (support | in shell) fix seemingly random ordering of fields of prettified json remove license-file from Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,16 +3,15 @@ name = "pp"
 version = "1.0.0"
 authors = ["Florian Lackner <florian.lackner@gmail.com>"]
 description = """
-Reads a json file and pretty prints it on stdout.
+Reads json either from stdin or a file and pretty prints it on stdout.
 """
 license = "GPL-3.0"
-license-file = "LICENSE"
 repository = "https://github.com/flo-l/pp_rs/"
 readme = "README.md"
 
-
 [dependencies]
 serde_json = "1.0"
+serde-transcode = "1.0"
 clap = "~2.31"
 error-chain = "0.11"
 filebuffer = "0.4.0"
