--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "pp"
-version = "1.1.0"
+name = "jsonpp"
+version = "2.0.0"
 authors = ["Florian Lackner <florian.lackner@gmail.com>"]
 description = """
 Reads json either from stdin or a file and pretty prints it on stdout.
 """
 license = "GPL-3.0"
-repository = "https://github.com/flo-l/pp_rs/"
+repository = "https://github.com/flo-l/jsonpp-rs"
 readme = "README.md"
 
 [dependencies]
