--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ readme = "README.md"
 edition = "2018"
 
 [dependencies]
-serde_json = "1.0"
+serde_json = {version = "1.0", features = ["unbounded_depth"]}
 serde-transcode = "1.0"
 clap = "~2.31"
 error-chain = "0.12"
